fix: overflow hidden

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,4 +1,3 @@
-
 html,
 body,
 body > #main-application,
@@ -9,6 +8,7 @@ iframe {
 	margin: 0;
 	border: none;
 	padding: 0;
+	overflow-y: hidden;
 
 	background-color: black;
 	color: white;
@@ -22,12 +22,12 @@ body > #main-application > * {
 	height: 100%;
 	width: 100%;
 
-	color: 				   white;
-	background-color:      black;
-	background-image:        url("loading.gif");
-	background-position:     center;
-	background-repeat:       no-repeat;
-	background-size: 		 200px;
+	color: white;
+	background-color: black;
+	background-image: url("loading.gif");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 200px;
 }
 
 /*******************************
@@ -134,12 +134,12 @@ kiosk-links .button {
 	border-width: 0;
 	box-sizing: border-box;
 
-	background-color:        black;
-	background-image:        url("/img/error.svg");
-	background-position:     center;
-	background-repeat:       no-repeat;
-	background-size:         contain;
-	color:                   white;
+	background-color: black;
+	background-image: url("/img/error.svg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	color: white;
 }
 
 .centered {
@@ -181,10 +181,10 @@ kiosk-links .button {
 }
 
 img[loading] {
-	background-image:        url("loading.gif");
-	background-position:     center;
-	background-repeat:       no-repeat;
-	background-size:         contain;
-	min-height: 			 20px;
-	min-width: 			     20px;
+	background-image: url("loading.gif");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	min-height: 20px;
+	min-width: 20px;
 }
